replaced .collect(Collectors.toList()) by .toList()